fixed error in showing solve issue button to all project manager

--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -1238,7 +1238,7 @@
                                 ${issue.solved === true ? 'Closed' : 'Open'}
                             </span>
                         </div>
-                        ${currentLoginUserRole === "PROJECT_MANAGER" ? 
+                        ${getLoginUser.currentUser.id === issue.user_pic.id ? 
                         '<button type="button" class="btn btn-info see-more-button text-white" data-id="${issue.id}">' +
                             '<i class="fa-solid fa-pen-to-square"></i>' +
                         '</button>' 
