Testing issue,department not finish

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2696,11 +2696,19 @@
                                     <div class="text-center">
                                         <button
                                             type="submit"
-                                            class="btn btn-primary col-2"
+                                            class="btn btn-primary col-lg-1"
                                             data-dismiss="modal"
                                             id="project-add-btn"
                                         >
                                             Add
+                                        </button>
+
+                                        <button
+                                                type="reset"
+                                                class="btn btn-secondary col-lg-1"
+                                                data-dismiss="modal"
+                                        >
+                                            Cancel
                                         </button>
                                     </div>
                                 </form>
@@ -2777,10 +2785,17 @@
                                     <div class="text-center">
                                         <button
                                             type="submit"
-                                            class="btn btn-primary mr-3"
+                                            class="btn btn-primary col-lg-1"
                                             data-dismiss="modal"
                                         >
-                                            Create
+                                            Add
+                                        </button>
+                                        <button
+                                                type="reset"
+                                                class="btn btn-secondary col-lg-1"
+                                                data-dismiss="modal"
+                                        >
+                                            Cancel
                                         </button>
                                     </div>
                                 </form>
