--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -316,8 +316,11 @@
                     </div>
 
                     <div class="w-25 m-auto d-flex justify-content-center align-items-center gap-2 mt-2">
-                        <button type="button" id="addIssue" class="btn btn-primary" >Save Data</button>
+                        <button type="button" id="addIssue" class="btn btn-primary" >Add Issue</button>
+
                     </div>
+
+
 
                 </div>
                 <!-- issue modal end -->
