open and close in project and can not create issue if the user is not in any project that are not open and fixed some error

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -836,7 +836,7 @@
         })
 
         $.ajax({
-            url: "api/project/count/project-manager/" + currentUser.currentUser.id + "/status/In_Progress",
+            url: "api/project/count/project-manager/" + currentUser.currentUser.id + "/status/" + false,
             type: "GET",
             dataType: "json",
             success: function (data) {
