--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2078,6 +2078,10 @@
                         errorContainer.remove();
                         $("#systemOutlines").css("border", "1px solid #28a745"); // Green border color for valid state
                     }
+                    console.log(
+                        "project systemoutline validaiont : ",
+                        validatedProjectForm
+                    );
                 }
 
                 console.log(
@@ -2209,6 +2213,10 @@
                         $(".quill-editor-full").addClass("is-valid");
                         $(".quill-editor-full").removeClass("is-invalid");
                     }
+                    console.log(
+                        "project objective validaiont : ",
+                        validatedProjectForm
+                    );
                 }
 
                 if (
@@ -2277,12 +2285,9 @@
                     console.log("submitted");
                     event.preventDefault();
 
-                    if (!validateProject()) {
-                        event.preventDefault();
+                    validateProject()
 
-                        if (validatedProjectForm) {
-                            this.submit();
-                        }
+                    if(!validatedProjectForm) {
                         return;
                     }
 
@@ -2413,10 +2418,6 @@
                             .removeClass("d-none");
                     }
 
-                    if (validateProject()) {
-                        return;
-                    }
-
                     // You may want to add some form validation here before sending the data
                     console.log(objective);
                     console.log(architectures);
@@ -2469,7 +2470,8 @@
                             alert("Project registered successfully");
                             // Reset the form if needed
                             $("#validation-form")[0].reset();
-                            createProjectList(data);
+                            const newProject = createProjectList(data);
+                            motherContainer.insertBefore(newProject, motherContainer.childNodes[0])
                         },
                         error: function (data) {
                             alert("Error registering project");
@@ -3120,10 +3122,7 @@
         <div class="modal bg-transparent fade" id="project-details" data-bs-keyboard="true">
             <div class="modal-dialog modal-dialog-centered modal-lg bg-transparent">
                 <div class="modal-content opacity-0">
-                    
-                        
                             <div class="col bg-transparent">
-                                
                                         <ul
                                             class="nav nav-tabs nav-tabs-bordered bg-transparent"
                                         >
@@ -3905,8 +3904,6 @@
                                                 ></div>
                                             </div>
                                         </div>
-                                    
-                                
                             </div>
                             <a
                                 href="/project"
@@ -3914,7 +3911,6 @@
                                 id="navigate-task"
                                 >manage task</a
                             >
-                        
                 </div>
             </div>
         </div>
