--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -461,25 +461,52 @@
             let condition = $(this).prop('checked');
             console.log(condition)
             const id = parseInt(document.getElementById("projectId").innerText)
-            $.ajax({
-                url: `/api/project/update/status/${id}/${!condition}`,
-                method: "GET",
-                success: function(response) {
-                    // Handle the successful response here
-                    console.log(response);
-                },
-                error: function(xhr, status, error) {
-                    // Handle the error here
-                    console.log(error);
-                }
-            });
 
             if(!condition) {
-                document.querySelectorAll('.task').forEach(a => {
-                    console.log(a)
-                    a.removeAttribute("draggable")
+                Swal.fire({
+                    title: "Are you sure want to close this project? All tasks will be locked!",
+                    icon: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#3085d6",
+                    cancelButtonColor: "#d33",
+                    confirmButtonText: "Yes"
+                }).then((result) => {
+                if (result.isConfirmed) {
+                        $.ajax({
+                            url: `/api/project/update/status/${id}/${!condition}`,
+                            method: "GET",
+                            success: function(response) {
+                                // Handle the successful response here
+                                console.log(response);
+                            },
+                            error: function(xhr, status, error) {
+                                // Handle the error here
+                                console.log(error);
+                            }
+                        });
+                        document.querySelectorAll('.task').forEach(a => {
+                            console.log(a)
+                            a.removeAttribute("draggable")
+                        })
+                    } else {
+                        $('#project-open-close').bootstrapToggle('on')
+                    }
                 })
             } else {
+
+                $.ajax({
+                    url: `/api/project/update/status/${id}/${!condition}`,
+                    method: "GET",
+                    success: function(response) {
+                    // Handle the successful response here
+                        console.log(response);
+                    },
+                    error: function(xhr, status, error) {
+                        // Handle the error here
+                        console.log(error);
+                    }
+                });
+
                 document.querySelectorAll('.task').forEach(a => {
                     console.log(a)
                     a.setAttribute("draggable", true)
