--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -48,9 +48,10 @@
                 id="dropdrown-search-bar"
         >
             <div class="d-flex flex-row justify-content-end gap-2">
-                <button class="btn btn-info" id="reset-btn">
+                <button class="btn btn-info" id="reset-btn" style="color: #ffffff !important;">
                     reset
                 </button>
+
                 <div class="d-inline-block">
                     <select id="status-filter" class="form-control">
                         <option value="" selected disabled>Status</option>
