--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2563,7 +2563,7 @@
                     id="dropdrown-search-bar"
                 >
                     <div class="d-flex flex-row justify-content-end gap-2">
-                        <button class="btn btn-info" id="reset-btn">
+                        <button class="btn btn-info" id="reset-btn" style="color: #ffffff !important;">
                             reset
                         </button>
                         <div class="d-inline-block">
