--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -89,17 +89,17 @@
                 color: red;
             }
         </style>
-        <script src="/js/fontawesome.js"></script>
+        <script src="/js/fontawesome.js" defer></script>
 
         <!-- jquery -->
-        <script src="/js/jquery.3.7.1.min.js"></script>
+        <script src="/js/jquery.3.7.1.min.js" defer></script>
 
         <!-- datable table -->
-        <script src="/js/databales.min.js"></script>
-        <script src="/js/logout-modal.js"></script>
+        <script src="/js/databales.min.js" defer></script>
+        <script src="/js/logout-modal.js" defer></script>
 
         <!-- bootstrap -->
-        <script src="/js/bootstrap.bundle.min.js"></script>
+        <script src="/js/bootstrap.bundle.min.js" defer></script>
         <script src="/lib/quill/quill.min.js" defer></script>
         <script src="/js/virtual-select/virtual-select.min.js" defer></script>
 
@@ -118,6 +118,8 @@
         <script src="/js/custome.js" defer></script>
         <script src="/js/getDataForProject.js" type="module" async></script>
         <!--        <script src="/js/currentLoginUser.js" type="module" async></script>-->
+        
+        <script defer src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.4/js/bootstrap5-toggle.min.js"></script>
         <script type="module" defer>
             $(document).ready(function () {
                 setupLogoutConfirmation();
@@ -1237,7 +1239,7 @@
                     //------------------------ architecture list end
 
                     //------------------------ deliverable list start
-                    document.querySelector("#deliverable-type").textContent =
+                    document.querySelector("#deliverable-list").textContent =
                         "";
                     let deliverableId;
                     currentProejctDetail.deliverableDto.forEach((a) => {
